table css changes

--- a/dashboardv2/public/ieerror.html
+++ b/dashboardv2/public/ieerror.html
@@ -34,7 +34,7 @@ Redirect();
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atlas</title>
+    <title>Data Realm</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="js/libs/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="js/libs/bootstrap/css/bootstrap.min.css">
