ui changes default load v2

--- a/build-tools/src/main/resources/ui-dist/index.html
+++ b/build-tools/src/main/resources/ui-dist/index.html
@@ -18,9 +18,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Atlas - Rest API</title>
+    <title>Data Realm</title>
     <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon" >
+    
     <style>
       html
       {
