Ui-Atlas removed

--- a/dashboardv2/public/ieerror.html
+++ b/dashboardv2/public/ieerror.html
@@ -48,7 +48,7 @@ Redirect();
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#"><i class="fa fa-globe"></i> Apache <strong>Atlas</strong></a>
+                    <a href="#"><i class="fa fa-globe"></i> Data Realm</a>
                     <!-- <a href="#menu-toggle" class="pull-right" id="menu-toggle"><i class="fa fa-bars"></i></a> -->
                 </li>
             </ul>
@@ -62,7 +62,7 @@ Redirect();
                 </div>
             </header>
             <div class="page-title clearfix">
-                <h3>Please note that Atlas does not supports old version of Internet Explorer.</h3>
+                <h3>Please note that Data Realm does not supports old version of Internet Explorer.</h3>
                 <p>We recommend upgrading to the latest <a href='https://www.microsoft.com/en-gb/download/internet-explorer.aspx'>Internet Explorer</a>, <a href='https://www.google.co.in/chrome/browser/desktop/'>Google Chrome</a>, or <a href='https://www.mozilla.org/en-US/firefox/new/'>Firefox</a>.</p>
             </div>
         </div>
